# redis-agent-control-plane

./: .env.example  .gitignore  .pre-commit-config.yaml  AI_COMMIT_POLICY.md  AUGGIE.md  CONTEXT.md  CONTRIBUTING.md  DOCUMENTATION_UPDATE_SUMMARY.md  Makefile  README.md  RELEASE_NOTES_v1.0.0.md  SECURITY.md  TASKS.md  TESTING.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docs/: PHASE_3_QUICK_START.md  RAG_PIPELINE.md  context_pack_schema.md
examples/: kubernetes_active_active.yaml  kubernetes_clustered.yaml  vm_single_node.yaml
notes/: DETERMINISTIC_BRANCH_SUMMARY.md  NEXT_PHASE_DETERMINISTIC_LAYER.md  PHASE_2_5_KICKOFF.md  PHASE_2_5_SCALE_TEST.md  PHASE_2_5_UPDATES.md  PHASE_2_COMPLETE.md  PHASE_2_KICKOFF.md  PHASE_3_COMPLETE.md  PHASE_3_EXECUTIVE_SUMMARY.md  PHASE_3_PLAN.md  PHASE_3_PROGRESS.md  PHASE_3_SUMMARY.md  PHASE_A_COMPLETE_PHASE_B_CRITICAL.md  PHASE_B_COMPLETE.md  PHASE_C_COMPLETE.md  PHASE_D_COMPLETE.md  PHASE_E_COMPLETE.md  PROJECT_STATUS.md  REDIS_ENTERPRISE_INSTALLATION_FINDINGS.md  RUNBOOK_ROADMAP.md  RUNBOOK_STRUCTURE_FINAL.md  RUNBOOK_VALIDATION_METHODOLOGY.md  SECURITY_AUDIT_2026_03_04.md  SECURITY_POLICY_UPDATE.md  V1_003_STEP_LIBRARY_COMPLETE.md  V1_004_GOLDEN_PATH_CLI_COMPLETE.md  V1_005_CI_GUARDRAILS_COMPLETE.md  V1_006_API_DECISION.md  V1_0_0_PRODUCTION_READY.md  rag_reference_findings.md
runbooks/: _registry.yaml
runbooks/redis_cloud/aws/: vpc_peering.yaml
runbooks/redis_enterprise/database/: kubernetes_reaadb.yaml  kubernetes_redb.yaml  vm_crdb.yaml  vm_standard.yaml
runbooks/redis_enterprise/kubernetes/: active_active.yaml  clustered.yaml
runbooks/redis_enterprise/vm/: active_active_prepare.yaml  clustered_3node.yaml  single_node.yaml
scripts/: build_rag_index.py  corpus_inventory.py  test_ft_search.py  test_hybrid_search.py  test_phase3_validation.py  test_rag_pipeline.py  test_redis_cloud_connection.py  test_retrieval_quality.py  test_routing.py  validate_plan.py  validate_registry.py  validate_runbooks.py  validate_steps.py
src/redis_agent_control_plane/: __init__.py  main.py
src/redis_agent_control_plane/cli/: __init__.py  explain.py  list_cmd.py  plan.py  search.py  validate.py
src/redis_agent_control_plane/orchestration/: __init__.py  context_builder.py  context_pack.py  deployment_spec.py  router.py  runbook.py
src/redis_agent_control_plane/rag/: __init__.py  (+5 more)
steps/: README.md
tests/: __init__.py  test_cli.py  test_context_builder.py  test_deployment_spec.py  test_rag_chunker.py  test_rag_embedder.py  test_rag_indexer.py  test_rag_pipeline.py  test_rag_retriever.py  test_router.py  test_runbook.py  test_smoke.py
(+21 files in other folders)
