[tool.poetry]
name = "redis-agent-control-plane"
version = "1.0.0"
description = "Production-ready Python library and CLI for deterministic Redis deployment planning with RAG-powered context generation"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "redis_agent_control_plane", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
redis = "^5.2.0"
pydantic = "^2.10.0"
pydantic-settings = "^2.6.0"
click = "^8.1.0"
pyyaml = "^6.0.0"
sentence-transformers = "^3.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
black = "^24.10.0"
ruff = "^0.8.0"
mypy = "^1.13.0"

[tool.poetry.scripts]
redis-agent-control-plane = "redis_agent_control_plane.main:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

